--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<p>Making mobile apps isn't so hard after all.</p>
 				</li>
 				<li>
-					<img src="views/images/pizzeria-min-min.jpg" style="width: 100px; height: 50px;"> <a href="views/pizza.html">Cam's Pizzeria</a>
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano%27s_Pizzeria_pizza_Dec-2013.JPG/800px-HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano%27s_Pizzeria_pizza_Dec-2013.JPG" width="414" class="img-responsive" style="width: 100px; height: 50px;"> <a href="views/pizza.html">Cam's Pizzeria</a>
 					<p>Who wants a performant pizza?</p>
 				</li>
 			</ul>
