--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
         ga('send', 'pageview');
 
 	</script>
-	<script async src="http://www.google-analytics.com/analytics.js"></script>
 	<script>
         function logCRP() {
             var t = window.performance.timing,
@@ -119,7 +118,8 @@
 		</footer>
 	</div>
 	<link href="css/print.css" media="print" rel="stylesheet">
-	<script async src="js/perfmatters.js">
-	</script>
+	<script async src="js/perfmatters.js"></script>
+        <script async src="http://www.google-analytics.com/analytics.js"></script>
+	
 </body>
 </html>
