--- a/project-webperf.html
+++ b/project-webperf.html
@@ -7,8 +7,6 @@
 	<meta content="FILL ME IN" name="author">
 	<title>Cameron Pittman: Portfolio</title><!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
 	<!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-	<link href="css/style.css" rel="stylesheet">
-	<link href="css/print.css" media="print" rel="stylesheet">
 	<script>
 	     (function(w,g){w['GoogleAnalyticsObject']=g;
 	     w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -17,14 +15,10 @@
 	     ga('create', 'UA-XXXX-Y');
 	     ga('send', 'pageview');
 	</script>
-	<script src="http://www.google-analytics.com/analytics.js">
-	</script>
-	<script async src="js/perfmatters.js">
-	</script>
 </head>
 <body>
 	<header>
-		<a href="/"><img src="img/profilepic-min.jpg"></a>
+		<a href="/"><img src="img/profilepic.jpg"></a>
 		<p>Cameron Pittman<br>
 		<span>Course Developer</span></p>
 	</header>
@@ -41,5 +35,12 @@
 			<p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 		</footer>
 	</div>
+	<script src="//www.google-analytics.com/analytics.js">
+	</script>
+    <script src="js/perfmatters.js"> </script>
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="screen,handheld">
+    <link href="css/style.css" rel="stylesheet" media="screen,handheld">
+    <link href="css/print.css" rel="stylesheet" media="print">
+	
 </body>
 </html>
