--- a/project-2048.html
+++ b/project-2048.html
@@ -37,8 +37,8 @@
 	<script src="//www.google-analytics.com/analytics.js">
 	</script>
     <script src="js/perfmatters.js"> </script>
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="screen,handheld">
-    <link href="css/style.css" rel="stylesheet" media="screen,handheld">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
     
 </body>
