--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
 
 	a { color: #12C; }
-	a:visited { color: #61C; }
+	a:visited { cozlor: #61C; }
 	a:focus { outline: thin dotted; }
 	a:hover, a:active { color: #c00; outline: 0; }
 
