--- a/project-mobile.html
+++ b/project-mobile.html
@@ -34,7 +34,7 @@
 			<p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 		</footer>
 	</div>
-	<link href="css/style.css" rel="stylesheet" media="screen,handheld">
+	<link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
     <script src="http://www.google-analytics.com/analytics.js">
 	</script>
