--- a/project-mobile.html
+++ b/project-mobile.html
@@ -10,34 +10,34 @@
 	<!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
 	<!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 	<script>
-		(function(w,g){w['GoogleAnalyticsObject']=g;
-		     w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-	
-		     // Optional TODO: replace with your Google Analytics profile ID.
-		     ga('create', 'UA-XXXX-Y');
-		     ga('send', 'pageview');
+		(function(w, g) {
+			w['GoogleAnalyticsObject'] = g;
+			w[g] = w[g] || function() {
+				(w[g].q = w[g].q || [])
+				.push(arguments)
+			};
+			w[g].l = 1 * new Date();
+		})(window, 'ga');
+		// Optional TODO: replace with your Google Analytics profile ID.
+		ga('create', 'UA-XXXX-Y');
+		ga('send', 'pageview');
 	</script>
 </head>
 
 <body>
-	<header>
-		<a href="/">
+	<header> <a href="/">
 			<img src="img/profilepic.jpg">
 		</a>
-		<p>Cameron Pittman
-			<br>	<span>Course Developer</span>
-		</p>
+		<p>Cameron Pittman <br> <span>Course Developer</span> </p>
 	</header>
 	<div class="container">
-		<div class="hero">	<strong>Developing for mobile is important!</strong> If you haven't taken this class, I highly recommend it!</div>
+		<div class="hero"> <strong>Developing for mobile is important!</strong> If you haven't taken this class, I highly recommend it!</div>
 		<div class="content">
-			<p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
-			<img src="img/mobilewebdev-min.jpg">
+			<p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p> <img src="img/mobilewebdev-min.jpg">
 			<p>Venison spare ribs dolor tri-tip duis turkey. Ut chicken proident ribeye est flank, sed frankfurter. Kielbasa exercitation ullamco leberkas. Landjaeger turkey culpa, tail short loin consectetur salami venison in corned beef eiusmod qui ad leberkas. Tri-tip adipisicing frankfurter ut sirloin rump consectetur. Chuck sint filet mignon labore eiusmod nulla. Venison shankle pork, consectetur nisi bacon spare ribs anim meatball sausage ball tip labore aute reprehenderit adipisicing.</p>
 		</div>
 		<footer>
-			<p>&copy; Web Performance 2014 <span id="crp-stats"></span>
-			</p>
+			<p>&copy; Web Performance 2014 <span id="crp-stats"></span> </p>
 		</footer>
 	</div>
 	<link href="css/style.css" rel="stylesheet">
